@@ -8,7 +8,7 @@ namespace LHAPDF {
   void PDF::print(std::ostream& os, int verbosity) const {
     stringstream ss;
     if (verbosity > 0)
-      ss << set().name() << "PDF set, member #" << memberID()
+      ss << set().name() << " PDF set, member #" << memberID()
          << ", version " << dataversion() << "; "
          << "LHAPDF ID = " << lhapdfID();
     if (verbosity > 1 && description().size() > 0)
